<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <Button
        android:id="@+id/check_in"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/check_in"
        android:textColor="@color/color_me_txt_status"
        style="?borderlessButtonStyle"
        android:textSize="20sp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/color_line"
        />
    <Button
        android:id="@+id/check_out"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/check_out"
        android:textColor="@color/color_me_txt_status"
        style="?borderlessButtonStyle"
        android:textSize="20sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/color_wide_line"
        />
    <Button
        android:id="@+id/check_cancel"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/txt_cancel"
        android:textColor="@color/color_me_txt_status"
        style="?borderlessButtonStyle"
        android:textSize="20sp"/>
</LinearLayout>