<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context="com.paic.crm.entrance.HomeActivity">

    <include
        layout="@layout/actionbar_layout"
        />
    <com.paic.crm.widget.TabFragmentHost
        android:id="@android:id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3.0"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.0"></FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/color_line" />

            <RadioGroup
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:orientation="horizontal"
                >

                <RadioButton
                    android:id="@+id/rb_conversion"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1.0"
                    android:background="#ffffff"
                    android:button="@null"
                    android:checked="true"
                    android:drawableTop="@drawable/icon_talk_seleted"
                    android:gravity="center"
                    android:minHeight="0dp"
                    android:paddingTop="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/txt_converson"
                    android:textColor="#48D1CC"
                    android:textSize="11sp" />


                <RadioButton
                    android:id="@+id/rb_contact"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1.0"
                    android:background="#ffffff"
                    android:button="@null"
                    android:drawableTop="@drawable/icon_contact_list_unpressed"
                    android:gravity="center"
                    android:minHeight="0dp"
                    android:paddingTop="5dp"
                    android:visibility="gone"
                    android:text="@string/txt_contacts"
                    android:textColor="#999999"
                    android:textSize="11sp" />

                <RadioButton
                    android:id="@+id/rb_work_bench"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1.0"
                    android:background="#ffffff"
                    android:button="@null"
                    android:drawableTop="@drawable/icon_platform_unselete"
                    android:gravity="center"
                    android:visibility="gone"
                    android:minHeight="0dp"
                    android:paddingTop="5dp"
                    android:text="@string/txt_work_bench"
                    android:textColor="#999999"
                    android:textSize="11sp" />


                <RadioButton
                    android:id="@+id/rb_weixun"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1.0"
                    android:background="#ffffff"
                    android:button="@null"
                    android:drawableTop="@drawable/icon_weixun_unselete"
                    android:gravity="center"
                    android:minHeight="0dp"
                    android:visibility="gone"
                    android:paddingTop="5dp"
                    android:text="@string/txt_weixun"
                    android:textColor="#999999"
                    android:textSize="11sp" />

                <RadioButton
                    android:id="@+id/rb_me"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1.0"
                    android:background="#ffffff"
                    android:button="@null"
                    android:drawableTop="@drawable/icon_mine_unselete"
                    android:gravity="center"
                    android:minHeight="0dp"
                    android:visibility="gone"
                    android:paddingTop="5dp"
                    android:text="@string/txt_me"
                    android:textColor="#999999"
                    android:textSize="11sp" />
            </RadioGroup>
            <!-- 调换framelayout和tabwidget的前后顺序可以分别实现tab的top和在底下的效果 -->

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"></TabWidget>
        </LinearLayout>
    </com.paic.crm.widget.TabFragmentHost>
</LinearLayout>
