<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_bg"
    >
        <include layout="@layout/actionbar_layout"/>

    <RelativeLayout
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/get_codes"
            android:layout_height="50dp"
            android:layout_width="wrap_content"
            android:background="@drawable/me_getcodes"
            android:layout_alignParentRight="true"
            android:text="获取验证码"
            android:textSize="@dimen/txt_16sp"
            android:clickable="false"
            android:gravity="center_horizontal|center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            style="?borderlessButtonStyle"
            />
        <com.paic.crm.widget.XEditText
            android:id="@+id/modify_phone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorPrimary"
            android:layout_toLeftOf="@id/get_codes"
            android:paddingRight="@dimen/margin_right_10dp"
            android:drawableRight="@drawable/icon_delete_01"
            android:textColorHint="@color/color_login_txt"
            android:textColor="#535c6a"
            android:textSize="@dimen/txt_16sp"
            android:gravity="center_vertical"
            android:digits="0123456789"
            android:hint="请输入手机号"
            android:maxLength="12"
            android:singleLine="true"
            android:paddingLeft="15dp"
            />

    </RelativeLayout>

    <View
            android:layout_width="match_parent"
            android:layout_height="10dp"/>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/codes"
                android:layout_height="50dp"
                android:layout_width="match_parent"
                android:background="@color/colorPrimary"
                android:paddingLeft="15dp"
                android:hint="@string/txt_codes"
                android:digits="0123456789"
                android:gravity="center_vertical"
                android:textColorHint="@color/color_login_txt"
                android:textColor="#535c6a"
                android:singleLine="true"
                android:textSize="@dimen/txt_16sp"/>
        </FrameLayout>
            <Button
                android:id="@+id/modify_sub_btn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/btn_login_seleter"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:textSize="17sp"
                android:textColor="@color/colorPrimary"
                style="?borderlessButtonStyle"
                android:gravity="center"
                android:text="@string/txt_submit"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/txt_special_note"
                android:layout_marginTop="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColor="#535c6a"/>
</LinearLayout>
