<?xml version="1.0" encoding="utf-8"?>
<com.paic.crm.widget.MyScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorPrimary"
    android:scrollbars="vertical">

    <LinearLayout
        android:id="@+id/me_root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">

            <ImageView
                android:id="@+id/iv_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <TextView
                android:id="@+id/um_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_me"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="3dp"
                android:text="岳绍君"
                android:textColor="@color/color_me_txt"
                android:textSize="@dimen/txt_17sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:background="@color/color_wide_line"
            android:layout_height="10dp" />

        <com.paic.crm.widget.ListviewForScrollView
            android:id="@+id/check_state_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


     <!--   <RelativeLayout
            android:id="@+id/online_status"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:background="@color/colorPrimary">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:text="@string/txt_status"
                android:textColor="@color/black_text"
                android:textSize="@dimen/txt_17sp" />


            <ImageView
                android:id="@+id/iv_arrow_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:src="@drawable/icon_arrow"
                android:visibility="visible" />

            <TextView
                android:id="@+id/tv_online_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/margin_right_5dp"
                android:layout_toLeftOf="@+id/iv_arrow_status"
                android:text="在线"
                android:textColor="@color/color_me_txt"
                android:textSize="@dimen/txt_17sp" />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/color_line"
            android:layout_marginLeft="@dimen/margin_left_10dp"
             />
        <RelativeLayout
            android:id="@+id/phone_status"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:background="@color/colorPrimary">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:text="@string/phone_status"
                android:textColor="@color/black_text"
                android:textSize="@dimen/txt_17sp" />


            <ImageView
                android:id="@+id/iv_arrow_phone_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:src="@drawable/icon_arrow"
                android:visibility="visible" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/margin_right_5dp"
                android:layout_toLeftOf="@+id/iv_arrow_phone_status"
                android:text="@string/check_status"
                android:textColor="@color/color_me_txt"
                android:textSize="@dimen/txt_17sp" />
        </RelativeLayout>
-->
        <View
            android:layout_width="match_parent"
            android:background="@color/color_wide_line"
            android:layout_height="10dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:background="@color/colorPrimary">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:text="@string/txt_name"
                android:textColor="@color/black_text"
                android:textSize="@dimen/txt_17sp" />


            <ImageView
                android:id="@+id/iv_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:src="@drawable/icon_arrow"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/um_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/margin_right_5dp"
                android:layout_toLeftOf="@+id/iv_arrow"
                android:text="@string/app_name"
                android:textColor="@color/color_me_txt"
                android:textSize="@dimen/txt_17sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/color_line"
            android:layout_marginLeft="@dimen/margin_left_10dp"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:background="@color/colorPrimary">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:text="@string/txt_sex"
                android:textColor="@color/black_text"
                android:textSize="@dimen/txt_17sp" />


            <ImageView
                android:id="@+id/iv_arrow_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:src="@drawable/icon_arrow"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/um_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/margin_right_5dp"
                android:layout_toLeftOf="@+id/iv_arrow_sex"
                android:text="女"
                android:textColor="@color/color_me_txt"
                android:textSize="@dimen/txt_17sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:background="@color/color_line"
            android:layout_marginLeft="10dp"
            android:layout_height="0.5dp" />

        <RelativeLayout
            android:id="@+id/me_phone"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:background="@color/colorPrimary">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:text="@string/txt_phone"
                android:textColor="@color/black_text"
                android:textSize="@dimen/txt_17sp" />


            <ImageView
                android:id="@+id/iv_arrow_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:src="@drawable/icon_arrow"
                android:visibility="visible" />

            <TextView
                android:id="@+id/um_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/margin_right_5dp"
                android:layout_toLeftOf="@+id/iv_arrow_phone"
                android:text="13713777777"
                android:textColor="@color/color_me_txt"
                android:textSize="@dimen/txt_17sp" />
        </RelativeLayout>
        <!-- <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="51dp"
             android:background="@color/colorPrimary">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="20dp"
                 android:text="@string/txt_email"
                 android:textColor="@color/color_me_txt_status"
                 android:textSize="@dimen/txt_17sp" />


             <ImageView
                 android:id="@+id/iv_arrow_email"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:layout_marginRight="@dimen/activity_horizontal_margin"
                 android:src="@drawable/icon_arrow" />

             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_marginRight="@dimen/margin_right_5dp"
                 android:layout_toLeftOf="@+id/iv_arrow_email"
                 android:text="yueshaojun@163.com"
                 android:textColor="@color/color_me_txt"
                 android:textSize="@dimen/txt_17sp" />
         </RelativeLayout>-->

        <View
            android:layout_width="match_parent"
            android:background="@color/color_wide_line"
            android:layout_height="10dp" />

        <RelativeLayout
            android:id="@+id/tv_feed_back"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:background="@color/colorPrimary">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:text="@string/txt_feed_back"
                android:textColor="@color/black_text"
                android:textSize="@dimen/txt_17sp" />


            <ImageView
                android:id="@+id/iv_arrow_feed_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:src="@drawable/icon_arrow" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/margin_right_5dp"
                android:layout_toLeftOf="@+id/iv_arrow_feed_back"
                android:textColor="@color/color_me_txt_status"
                android:textSize="@dimen/txt_17sp" />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:background="@color/color_wide_line"
            android:layout_height="10dp" />
        <RelativeLayout
            android:id="@+id/tv_settings"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:background="@color/colorPrimary">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:text="@string/settings"
                android:textColor="@color/black_text"
                android:textSize="@dimen/txt_17sp" />


            <ImageView
                android:id="@+id/iv_arrow_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:src="@drawable/icon_arrow" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/margin_right_5dp"
                android:layout_toLeftOf="@+id/iv_arrow_settings"
                android:textColor="@color/color_me_txt_status"
                android:textSize="@dimen/txt_17sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:background="@color/color_wide_line"
            android:layout_height="10dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="91dp"
            android:background="@color/colorPrimary">

            <Button
                android:id="@+id/btn_exit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_centerInParent="true"
                android:layout_marginLeft="@dimen/margin_left_10dp"
                android:layout_marginRight="@dimen/margin_right_10dp"
                android:background="@drawable/logout_btn_selector"
                android:gravity="center"
                android:text="@string/txt_exit"
                android:textColor="@color/colorPrimary"
                style="?borderlessButtonStyle"
                android:textSize="@dimen/txt_17sp" />
        </RelativeLayout>
    </LinearLayout>
</com.paic.crm.widget.MyScrollView>